remove unused endpoint, update doku
